--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "main": "background.js",
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
+    "autoprefixer": "^10.4.7",
     "core-js": "^3.8.3",
+    "postcss": "^8.4.14",
     "vue": "^3.2.13"
   },
   "devDependencies": {
