--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
     "autoprefixer": "^10.4.7",
-    "core-js": "^3.8.3",
+    "core-js": "^3.23.4",
     "postcss": "^8.4.14",
     "vue": "^3.2.13"
   },
@@ -23,14 +23,16 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@tailwindcss/forms": "^0.5.2",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "electron": "^13.0.0",
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "tailwindcss": "^3.1.4",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.12",
+    "tailwindcss": "^3.1.6",
     "vue-cli-plugin-electron-builder": "~2.1.1"
   },
   "eslintConfig": {
