--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"autoprefixer": "^10.4.7",
 		"core-js": "^3.23.4",
 		"postcss": "^8.4.14",
-		"vue": "^3.2.13"
+		"vue": "^3.2.13",
+		"vue-i18n": "^9.1.10"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.16",
