--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"core-js": "^3.23.4",
 		"postcss": "^8.4.14",
 		"vue": "^3.2.13",
-		"vue-i18n": "^9.1.10"
+		"vue-i18n": "^9.1.10",
+		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.16",
