--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@heroicons/vue": "^1.0.6",
 		"autoprefixer": "^10.4.7",
 		"core-js": "^3.23.4",
+		"levenshtein": "^1.0.5",
 		"postcss": "^8.4.14",
 		"vue": "^3.2.13",
 		"vue-i18n": "^9.1.10",
